# ros2_spot_mini_mini

./: .gitignore
src/spot_mini_mini_calibration/: package.xml  setup.cfg  setup.py
src/spot_mini_mini_calibration/spot_mini_mini_calibration/: calibration_node.py
src/spot_mini_mini_control/: package.xml  setup.cfg  setup.py
src/spot_mini_mini_control/config/: spot_params.yaml
src/spot_mini_mini_control/launch/: spot_agent_move.launch.py  spot_move.launch.py
src/spot_mini_mini_control/policies/: mini_ars_Backward_policy_old.npy  mini_ars_Forward_policy.npy  mini_ars_Left_policy.npy
src/spot_mini_mini_control/spot_mini_mini_control/: spot_agent_commander.py  spot_commander.py
src/spot_mini_mini_control/spot_mini_mini_control/spotmicro/GaitGenerator/: Bezier.py
src/spot_mini_mini_control/spot_mini_mini_control/spotmicro/Kinematics/: SpotKinematics.py
src/spot_mini_mini_control/test/: kinamatics_test.py
src/spot_mini_mini_description/: CMakeLists.txt  package.xml
src/spot_mini_mini_description/launch/: display.launch.py  rviz.launch.py
src/spot_mini_mini_description/rviz/: spot_mini_mini.rviz
src/spot_mini_mini_description/urdf/: ros2_control.xacro  spot.urdf  spot.urdf.xacro  spot_accessories.urdf  spot_macro.xacro
src/spot_mini_mini_gazebo/: CMakeLists.txt  package.xml
src/spot_mini_mini_gazebo/config/: control.yaml
src/spot_mini_mini_gazebo/launch/: controller.launch.py  gazebo.launch.py
src/spot_mini_mini_gazebo/scripts/: hold_position.py
src/spot_mini_mini_gazebo/worlds/: empty.sdf
src/spot_mini_mini_interfaces/: CMakeLists.txt  package.xml
src/spot_mini_mini_pybullet/: package.xml  setup.cfg  setup.py
src/spot_mini_mini_pybullet/spot_mini_mini_pybullet/: spot_pybullet_teleop.py
src/spot_mini_mini_pybullet/spot_mini_mini_pybullet/spot_bullet/src/: env_tester.py  spot_ars.py  spot_ars_eval.py
src/spot_mini_mini_pybullet/spot_mini_mini_pybullet/spot_bullet/src/ars_lib/: ars.py
src/spot_mini_mini_pybullet/spot_mini_mini_pybullet/spot_bullet/src/old_eval_scripts/: ars_eval.py  sac_eval.py  spot_sac_eval.py  td3_eval.py  tg_eval.py
src/spot_mini_mini_pybullet/spot_mini_mini_pybullet/spot_bullet/src/old_training_scripts/: mini_ars.py  mini_td3.py  mini_tg_ars.py  spot_sac.py
src/spot_mini_mini_pybullet/spot_mini_mini_pybullet/spot_bullet/src/tg_lib/: tg_playground.py  tg_policy.py
src/spot_mini_mini_pybullet/spot_mini_mini_pybullet/spotmicro/: env_randomizer_base.py  heightfield.py  motor.py  spot.py  spot_env_randomizer.py  spot_gym_env.py
src/spot_mini_mini_pybullet/spot_mini_mini_pybullet/spotmicro/GaitGenerator/: Bezier.py
src/spot_mini_mini_pybullet/spot_mini_mini_pybullet/spotmicro/GymEnvs/: spot_bezier_env.py
src/spot_mini_mini_pybullet/spot_mini_mini_pybullet/spotmicro/Kinematics/: SpotKinematics.py
src/spot_mini_mini_pybullet/spot_mini_mini_pybullet/spotmicro/OpenLoopSM/: SpotOL.py
src/spot_mini_mini_pybullet/test/: butter_low_pass_test.py
src/spot_mini_mini_real/: package.xml  setup.cfg  setup.py
src/spot_mini_mini_real/launch/: spot_real.launch.py
src/spot_mini_mini_real/spot_mini_mini_real/: real_interface.py
src/spot_mini_mini_teleop/: CMakeLists.txt  package.xml
src/spot_mini_mini_teleop/include/spot_mini_mini_teleop/: spot.hpp  teleop.hpp
src/spot_mini_mini_teleop/policies/: mini_ars_Backward_policy.npy  mini_ars_CW_policy.npy  mini_ars_Forward_policy_old.npy
src/spot_mini_mini_teleop/src/: spot.cpp  spot_sm.cpp  teleop.cpp  teleop_node.cpp
