<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_mini_mini_control</name>
  <version>0.0.1</version>
  <description>Spot Mini Mini control — BezierGait + IK migrated from ROS1</description>
  <maintainer email="vats@todo.todo">vats_intern</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>spot_mini_mini_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
