<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_mini_mini_real</name>
  <version>0.0.0</version>
  <description>Spot Mini Mini real robot hardware interface</description>
  <maintainer email="chandan22102@iiitnr.edu.in">vats_intern</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>
  <depend>spot_mini_mini_interfaces</depend>
  <depend>spot_mini_mini_teleop</depend>
  <depend>spot_mini_mini_control</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>spot_mini_mini_interfaces</exec_depend>
  <exec_depend>spot_mini_mini_teleop</exec_depend>
  <exec_depend>spot_mini_mini_control</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
